tests/negative/gold/unexpected_indent_test.gold
tests/negative/unexpected_indent_test.toit:10:5: error: All arguments must have the same indentation.
    2
    ^
Compilation failed.
